2008-07-15  Mirco Bauer <meebey@meebey.net> 

	* Protocols/IProtocolManager.cs, Protocols/ProtocolManagerBase.cs: Added
	  FindGroupChats().
	
	  Added OpenChat().
	
	  Added CloseChat().
	* Chats/GroupChatModel.cs: Added PersonCount property.
	* Chats/ChatModel.cs: Made ctor protected.

2008-07-14  Mirco Bauer <meebey@meebey.net> 

	

2008-07-14  Mirco Bauer <meebey@meebey.net> 

	* Config/Config.cs: Added OFTC, GIMPNet, EFnet, IRCnet and freenode as
	  default IRC servers.
	
	  New users will join #smuxi on the first start automatically.

2008-06-30  Mirco Bauer <meebey@meebey.net> 

	* Session.cs: Expose session chat as property.
	
	  Added check for auto-connect that /connect was passed, as required by
	  the protocol manager implementations.
	
	  Only pass password to IProtocolManager.Connect() if it's not null and
	  not empty.

2008-06-25  Mirco Bauer <meebey@meebey.net> 

	* Protocols/IProtocolManager.cs, Protocols/ProtocolManagerBase.cs: Expose
	  chats owned by the protocol manager.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* Session.cs: Nicer code path.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* Engine.mdp, Chats/ChatType.cs, Chats/ProtocolChatModel.cs,
	  Chats/NetworkChatModel.cs: Renamed confusing NetworkChatModel to
	  ProtocolChatModel and ChatType.Network to ChatType.Protocol.

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.31

2008-03-04  Mirco Bauer <meebey@meebey.net> 

	* Protocols/ProtocolManagerFactory.cs: Skip abstract classes that implement
	  IProtocolManager.

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Session.cs: Implemented SessionChat*, abusing NetworkChat* as smuxi chat
	  was a dirty hack.
	
	  Register ProtocolManagers when connecting automatically to servers.
	
	* Chats/ChatModel.cs: Fixed indention.
	* Chats/ChatType.cs, Chats/SessionChatModel.cs: Implemented SessionChat*,
	  abusing NetworkChat* as smuxi chat was a dirty hack.
