@@ -739,6 +739,58 @@ namespace Smuxi.Frontend.Gnome
             }
         }
         
+        public virtual void ApplyConfig(UserConfig config)
+        {
+            Trace.Call(config);
+            
+            if (config == null) {
+                throw new ArgumentNullException("config");
+            }
+            
+            string bgStr = (string) config["Interface/Chat/BackgroundColor"];
+            if (!String.IsNullOrEmpty(bgStr)) {
+                Gdk.Color bgColor = Gdk.Color.Zero;
+                if (Gdk.Color.Parse(bgStr, ref bgColor)) {
+                    ModifyBase(Gtk.StateType.Normal, bgColor);
+                }
+            } else {
+                ModifyBase(Gtk.StateType.Normal);
+            }
+            
+            string fgStr = (string) config["Interface/Chat/ForegroundColor"];
+            if (!String.IsNullOrEmpty(fgStr)) {
+                Gdk.Color fgColor = Gdk.Color.Zero;
+                if (Gdk.Color.Parse(fgStr, ref fgColor)) {
+                    ModifyText(Gtk.StateType.Normal, fgColor);
+                }
+            } else {
+                ModifyText(Gtk.StateType.Normal);
+            }
+            
+            string fontFamily = (string) config["Interface/Chat/FontFamily"];
+            string fontStyle = (string) config["Interface/Chat/FontStyle"];
+            int fontSize = 0;
+            if (config["Interface/Chat/FontSize"] != null) {
+                fontSize = (int) config["Interface/Chat/FontSize"];
+            }
+            Pango.FontDescription fontDescription = new Pango.FontDescription();
+            if (!String.IsNullOrEmpty(fontFamily)) {
+                fontDescription.Family = fontFamily;
+                string frontWeigth = null;
+                if (fontStyle.Contains(" ")) {
+                    int pos = fontStyle.IndexOf(" ");
+                    frontWeigth = fontStyle.Substring(0, pos);
+                    fontStyle = fontStyle.Substring(pos + 1);
+                }
+                fontDescription.Style = (Pango.Style) Enum.Parse(typeof(Pango.Style), fontStyle);
+                if (frontWeigth != null) {
+                    fontDescription.Weight = (Pango.Weight) Enum.Parse(typeof(Pango.Weight), frontWeigth);
+                }
+                fontDescription.Size = fontSize * 1024;
+            }
+            ModifyFont(fontDescription);
+        }
+
         private static string _(string msg)
         {
             return Mono.Unix.Catalog.GetString(msg);
